# DLMS-COSEM

./: .gitignore  CMakeLists.txt  DLMS-COSEM.sln  DeveloperGuide.docx  LICENSE  README  README.md  doxyfile
doc/: 01_intro.md  02_devguide.md  CMakeLists.txt  doxygen.conf.in
lib/DLMS-COSEM/: BaseComponent.cpp  BaseLibrary.cpp  CMakeLists.txt  COSEM.cpp  COSEMClient.cpp  COSEMDevice.cpp  COSEMEngine.cpp  COSEMObjectInstanceID.cpp  COSEMSecurity.cpp  COSEMServer.cpp  Core.cpp  DLMS-COSEM-Debug.vgdbsettings  DLMS-COSEM-Release.vgdbsettings  DLMS-COSEM.cpp  DLMS-COSEM.h  DLMS-COSEM.vcxproj  DLMS-COSEM.vcxproj.filters  DLMSVector.cpp  LogicalDevice.cpp  Makefile  StateMachine.cpp  Wrapper.cpp  debug.mak  gcc_Debug.h  gcc_Release.h  release.mak
lib/DLMS-COSEM/APDU/: AARE.cpp  AARQ.cpp  ACTION-Request.cpp  ACTION-Response.cpp  APDUConstants.cpp  APDUFactory.cpp  ASNType.cpp  GET-Request.cpp  GET-Response.cpp  RLRE.cpp  RLRQ.cpp  SET-Request.cpp  SET-Response.cpp  xDLMS.cpp
lib/DLMS-COSEM/hdlc/: HDLCAddress.cpp  HDLCClient.cpp  HDLCHelpers.cpp  HDLCLLC.cpp  HDLCMAC.cpp  HDLCServer.cpp  HDLCStatistics.cpp  modcnt.cpp  packet.cpp
lib/DLMS-COSEM/include/: BaseComponent.h  BaseLibrary.h  COSEM.h  COSEMAddress.h  COSEMDevice.h  COSEMEngine.h  COSEMObjectInstanceID.h  COSEMSecurity.h  COSEMTypes.h  Callback.h  Core.h  DLMS-COSEM.h  DLMSVector.h  ERROR_TYPE.h  HDLCLLC.h  IBaseComponent.h  IBaseLibrary.h  ICore.h  IDebug.h  IMemory.h  IScheduler.h  ISerial.h  ISimpleTimer.h  ISocket.h  ISynchronization.h  LogicalDevice.h  SerialWrapper.h  StateMachine.h  Transport.h  Wrapper.h  optional.h
lib/DLMS-COSEM/include/APDU/: AARE.h  AARQ.h  ACTION-Request.h  ACTION-Response.h  APDU.h  APDUComponent.h  APDUConstants.h  APDUDefs.h  APDUFactory.h  ASNType.h  GET-Request.h  GET-Response.h  RLRE.h  RLRQ.h  SET-Request.h  SET-Response.h  xDLMS.h
lib/DLMS-COSEM/include/hdlc/: HDLCAddress.h  HDLCControl.h  HDLCErrors.h  HDLCHelpers.h  HDLCMAC.h  HDLCOptions.h  HDLCStatistics.h  appdefs.h  comdefs.h  linkdefs.h  modcnt.h  packet.h
lib/DLMS-COSEM/include/interfaces/: COSEMAttribute.h  COSEMData.h  COSEMMethod.h  DLMSAttribute.h  DLMSData.h  DLMSDataTypes.h  IAssociationLN.h  ICOSEMInterface.h  IClock.h  IDLMSInterface.h  IData.h
lib/DLMS-COSEM/include/serialwrapper/: SerialWrapper.h
lib/DLMS-COSEM/include/tcpwrapper/: TCPWrapper.h
lib/DLMS-COSEM/interfaces/: COSEMData.cpp  IAssociationLN.cpp  ICOSEMInterface.cpp  IClock.cpp  IData.cpp
lib/DLMS-COSEM/serialwrapper/: SerialWrapper.cpp
lib/DLMS-COSEM/tcpwrapper/: TCPWrapper.cpp
src/: CMakeLists.txt  main.cpp
src/Linux/: CMakeLists.txt  Linux-Debug.vgdbsettings  Linux.cpp  Linux.vcxproj  Linux.vcxproj.filters  LinuxBaseLibrary.cpp  LinuxCOSEMServer.cpp  LinuxCore.cpp  LinuxDebug.cpp  LinuxMemory.cpp  LinuxScheduler.cpp  LinuxSerial.cpp  LinuxSimpleTimer.cpp  LinuxSocket.cpp  LinuxSynchronization.cpp  gcc_Debug.h
src/Linux/include/: LinuxBaseLibrary.h  LinuxCOSEMServer.h  LinuxCore.h  LinuxDebug.h  LinuxMemory.h  LinuxScheduler.cpp  LinuxScheduler.h  LinuxSerial.h  LinuxSimpleTimer.h  LinuxSocket.h  LinuxSynchronization.h
src/STM32-NUCLEO-F207ZG/: CircularBuffer.cpp  FreeRTOSConfig.h  FreeRTOSNew.cpp  Makefile  STM32-Client.cpp  STM32-NUCLEO-F207ZG-Debug.vgdbsettings  STM32-NUCLEO-F207ZG-Release.vgdbsettings  STM32-NUCLEO-F207ZG.c  STM32-NUCLEO-F207ZG.vcxproj  STM32-NUCLEO-F207ZG.vcxproj.filters  STM32-Server.cpp  STM32BaseLibrary.cpp  STM32Core.cpp  STM32CosemServer.cpp  STM32Debug.cpp  STM32Memory.cpp  STM32Scheduler.cpp  STM32Serial.cpp  STM32SimpleTimer.cpp  debug.mak  gcc_Debug.h  gcc_Release.h  release.mak  stm32.mak  stm32.xml  stm32f2xx_hal_conf.h  system_stm32f2xx.c
src/STM32-NUCLEO-F207ZG/BSP/: STM32F207ZG_flash.lds  stm32_compat.h
src/STM32-NUCLEO-F207ZG/BSP/STM32F2xxxx/STM32F2xx_HAL_Driver/Inc/: stm32f2xx_hal.h  stm32f2xx_hal_adc.h  stm32f2xx_hal_adc_ex.h  stm32f2xx_hal_can.h  stm32f2xx_hal_cortex.h  stm32f2xx_hal_crc.h  stm32f2xx_hal_cryp.h  stm32f2xx_hal_dac.h  stm32f2xx_hal_dac_ex.h  stm32f2xx_hal_dcmi.h  stm32f2xx_hal_def.h  stm32f2xx_hal_dma.h  stm32f2xx_hal_dma_ex.h  stm32f2xx_hal_eth.h  stm32f2xx_hal_flash.h  stm32f2xx_hal_flash_ex.h  stm32f2xx_hal_gpio.h  stm32f2xx_hal_gpio_ex.h  stm32f2xx_hal_hash.h  stm32f2xx_hal_hcd.h  stm32f2xx_hal_i2c.h  (+24 more)
src/STM32-NUCLEO-F207ZG/BSP/STM32F2xxxx/StartupFiles/: startup_stm32f207xx.c
src/STM32-NUCLEO-F207ZG/include/: CircularBuffer.h  STM32-Client.h  STM32-Server.h  STM32BaseLibrary.h  STM32Core.h  STM32CosemServer.h  STM32Debug.h  STM32Memory.h  STM32Scheduler.h  STM32Serial.h  STM32SimpleTimer.h
test/: CMakeLists.txt  DummySerial.h  UnitTest-APDU-AARE.cpp  UnitTest-APDU-AARQ.cpp  UnitTest-APDU-ACTION-Request.cpp  UnitTest-APDU-ACTION-Response.cpp  UnitTest-APDU-GET-Request.cpp  UnitTest-APDU-GET-Response.cpp  UnitTest-APDU-RLRE.cpp  UnitTest-APDU-RLRQ.cpp  UnitTest-APDU-xDLMS.cpp  UnitTest-COSEM-Client.cpp  UnitTest-COSEMObjectInstanceID.cpp  UnitTest-DLMSVector.cpp  UnitTest-HDLC-Address.cpp  UnitTest-HDLC-Client.cpp  UnitTest-HDLC-LLC.cpp  UnitTest-HDLC-MAC.cpp  UnitTest-HDLC-Packet.cpp  UnitTest-HDLC-Server.cpp  UnitTest-ICOSEMInterface.cpp  UnitTest-Interfaces-COSEMData.cpp  UnitTest-LinuxMemory.cpp  UnitTest-StateMachine.cpp
test/DLMS-COSEM-TEST/: CMakeLists.txt  DLMS-COSEM-TEST-Debug.vgdbsettings  DLMS-COSEM-TEST-Release.vgdbsettings  DLMS-COSEM-TEST.cpp  DLMS-COSEM-TEST.vcxproj  DLMS-COSEM-TEST.vcxproj.filters  DummySerial.h  UnitTest-APDU-AARE.cpp  UnitTest-APDU-AARQ.cpp  UnitTest-APDU-ACTION-Request.cpp  UnitTest-APDU-ACTION-Response.cpp  UnitTest-APDU-GET-Request.cpp  UnitTest-APDU-GET-Response.cpp  UnitTest-APDU-RLRE.cpp  UnitTest-APDU-RLRQ.cpp  UnitTest-APDU-xDLMS.cpp  UnitTest-COSEM-Client.cpp  UnitTest-COSEMObjectInstanceID.cpp  UnitTest-DLMSVector.cpp  UnitTest-HDLC-Address.cpp  UnitTest-HDLC-Client.cpp  UnitTest-HDLC-LLC.cpp  UnitTest-HDLC-MAC.cpp  UnitTest-HDLC-Packet.cpp  UnitTest-HDLC-Server.cpp  UnitTest-ICOSEMInterface.cpp  UnitTest-IDLMSInterface.cpp  UnitTest-Interfaces-COSEMData.cpp  UnitTest-LinuxMemory.cpp  UnitTest-StateMachine.cpp  gcc_Debug.h
(+73 files in other folders)
