cmake_minimum_required(VERSION 3.0)
set(EXECUTABLE_NAME "countdown")
find_package(Asio REQUIRED)
add_definitions(-DASIO_STANDALONE)
if(WIN32)
    add_definitions(-D_WIN32_WINDOWS=0x0601)
endif()
include_directories(${ASIO_INCLUDE_DIR})
add_executable(${EXECUTABLE_NAME} main.cpp)
INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
